; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/libcaption/src/extr_eia608.c_eia608_to_utf8.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/libcaption/src/extr_eia608.c_eia608_to_utf8.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @eia608_to_utf8(i32 %0, i32* %1, i8* %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32* %1, i32** %6, align 8
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %12 = load i32, i32* %5, align 4
  %13 = load i32*, i32** %6, align 8
  %14 = call i64 @eia608_to_index(i32 %12, i32* %13, i32* %9, i32* %10)
  %15 = trunc i64 %14 to i32
  store i32 %15, i32* %11, align 4
  %16 = load i8*, i8** %7, align 8
  %17 = load i32, i32* %9, align 4
  %18 = call i32 @utf8_from_index(i32 %17)
  %19 = call i32 @utf8_char_copy(i8* %16, i32 %18)
  %20 = load i8*, i8** %8, align 8
  %21 = load i32, i32* %10, align 4
  %22 = call i32 @utf8_from_index(i32 %21)
  %23 = call i32 @utf8_char_copy(i8* %20, i32 %22)
  %24 = load i32, i32* %11, align 4
  ret i32 %24
}

declare dso_local i64 @eia608_to_index(i32, i32*, i32*, i32*) #1

declare dso_local i32 @utf8_char_copy(i8*, i32) #1

declare dso_local i32 @utf8_from_index(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
